--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,16 @@ body{
 
 }
 .top{
+height: 100px;
   position: absolute;
-right: 150px;
+left: 65%;
 top: 40px;
 }
 .bot{
+  height: 100px;
   position: absolute;
-left: 100px;
-top:200px;
+  right: 70%;
+top:250px;
 }
 .webdev{
   width: 25%;
@@ -100,6 +102,8 @@ hr
   margin: 50px auto;
   background-color: #66BFBF;
   padding: 50px 0 20px;
+  height: 120px;
+  margin-bottom: 0;
 }
 a{
   color: #11999E;
@@ -109,4 +113,8 @@ a{
 }
 a:hover{
   color: #EAF6F6;
+}
+.cpy{
+  margin: 10px;
+  font-size: 20%;
 }
